Fix shared blob retention and preserve host file limits